--- a/WhatsApp/app/build.gradle
+++ b/WhatsApp/app/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-storage:19.1.0'
     implementation 'com.google.firebase:firebase-messaging:20.0.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'com.google.firebase:firebase-core:16.0.4'
     testImplementation 'junit:junit:4.12'
     implementation 'com.google.android.material:material:1.2.0-alpha01'
     androidTestImplementation 'androidx.test:runner:1.1.0-alpha3'
