--- a/WhatsApp/app/build.gradle
+++ b/WhatsApp/app/build.gradle
@@ -44,5 +44,9 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.71828'
     //mplementation 'com.theartofdev.edmodo:android-image-cropper:2.8.+'
 
+    implementation 'com.google.firebase:firebase-database:11.8.0'
+    implementation 'com.google.firebase:firebase-storage:11.8.0'
+    implementation 'com.firebaseui:firebase-ui-database:3.2.2'
+
 
 }
